# utils

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
cmake/: android-arm-64.cmake
ranges/: CMakeLists.txt
ranges/implement/: ranges.cpp
ranges/include/: ranges.hpp
trie/: CMakeLists.txt
trie/include/: trie.hpp
